# todui

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.toml  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: agent-features.md  development.md  documentation.md  implement.md  plan.md  prompt.md  spec.md
fixtures/screenshots/: README.md  history-beige-blue.db  history-beige-blue.toml  overview-dark-cyan.db  overview-dark-cyan.toml  session-light-red.db  session-light-red.toml
npm-tests/: package.test.mjs
scripts/: release-notes.mjs
scripts/npm/: check-version-sync.mjs  install.mjs  shared.mjs
skills/project-build/: SKILL.md
skills/project-plan/: SKILL.md
src/: action.rs  app.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  reducer.rs  timestamp.rs
src/db/: app_state.rs  connection.rs  migrations.rs  mod.rs  pomodoro.rs  revisions.rs  sessions.rs  todos.rs
src/domain/: github.rs  mod.rs  pomodoro.rs  revision.rs  session.rs  todo.rs
src/export/: markdown.rs
src/tui/: browser.rs  input.rs  layout.rs  mod.rs  overview.rs  screen.rs  terminal.rs  theme.rs  widgets.rs
src/tui/widgets/: details.rs  editor.rs  footer.rs  history.rs  markdown.rs  pomodoro.rs  todo_list.rs
tests/: cli_help.rs  cli_workflows.rs
