[package]
name = "todui"
version = "0.1.1"
edition = "2024"
description = "Local-first terminal todo app with session history, a full-screen TUI, and SQLite persistence."
license = "MIT"
repository = "https://github.com/RobertTLange/todui"
homepage = "https://github.com/RobertTLange/todui"
readme = "README.md"
keywords = ["todo", "tui", "cli", "sqlite", "productivity"]
categories = ["command-line-utilities", "database"]
rust-version = "1.85"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "local-offset", "macros"] }
toml = "0.9.2"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.20.0"
